# tna

./: CMakeLists.txt
data/shaders/: compile_shaders.sh  shader.vert
src/: CMakeLists.txt  game.cpp  game.h  game_references.h  main.cpp  platform.h  prefabs.cpp  prefabs.h  scene.cpp  scene.h
src/components/: follower.h  laggy_follower.h  rotation.h  rotation_speed.h  soldier.h  unit_member.h
src/engine/: common.h  config.cpp  config.h  engine.cpp  engine.h  entity.h  error.cpp  error.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  log.cpp  log.h  optional.h  types.h
src/engine/components/: fps_camera.cpp  fps_camera.h  look_at_camera.cpp  look_at_camera.h  mesh.h  proj_view_matrix.h  render_mesh_data.cpp  render_mesh_data.h  transform.cpp  transform.h  transform_matrix.h  viewport.h
src/engine/data/: bvh.cpp  bvh.h  queue.h  queue.inl
src/engine/gui/widgets/: tasking_widget.cpp  tasking_widget.h
src/engine/math/: math_tools.cpp  math_tools.h  matrix.h  vector.h
src/engine/rendering/: buffer.h  mesh.h  mesh_data.cpp  mesh_data.h  renderer.cpp  renderer.h  rendering.cpp  rendering.h  rendering_scene.cpp  rendering_scene.h  shader.cpp  shader.h  shader_tools.cpp  shader_tools.h  shaders.cpp  shaders.h  vertex.h
src/engine/rendering/vulkan/: vkbuffer.cpp  vkbuffer.h  vkbuffer_tools.cpp  vkbuffer_tools.h  vkdevice.cpp  vkdevice.h  vkmem_alloc.h  vkmesh_data.cpp  vkmesh_data.h  vkrenderer.cpp  vkrenderer.h  vkrenderer_tools.cpp  vkrenderer_tools.h  vkscene.cpp  vkscene.h  vkshader.cpp  vkshader.h  vkshader_tools.cpp  vkshader_tools.h  vkswapchain.cpp  vkswapchain.h  vkvertex_tools.cpp  vkvertex_tools.h
src/engine/rendering/vulkan/gui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  vkgui.cpp  vkgui.h
src/engine/resources/: directory_registry.cpp  directory_registry.h  resource_registry.h  resource_registry.inl  resources.cpp  resources.h
src/engine/scripts/: priorities.h  render_mesh.cpp  set_camera.cpp  set_proj_view.cpp  transform_hierarchy.cpp
src/engine/shapes/: aabb.h
src/engine/systems/: render_mesh.h
src/engine/tasking/: atomic_counter.cpp  atomic_counter.h  barrier.cpp  barrier.h  mutex.cpp  mutex.h  task.h  task_pool.cpp  task_pool.h  tasking.cpp  tasking.h  tasking.inl
src/engine/tools/: colors.h  files.cpp  files.h  references.h
src/engine/trace/: trace.cpp  trace.h  traces.h
src/scripts/: follower.cpp  laggy_follow.cpp  priorities.h  rotator.cpp  update_unit_members.cpp
src/test/: CMakeLists.txt  queue_test.cpp  tasking_test.cpp
src/tnasdk/: definitions.h
